# ProgrammingInPython

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  requirements.txt
.github/workflows/: gh-pages.yaml  lint.yaml
source/: conf.py  index.rst
source/class_schedule/: index.rst  lesson01.rst  lesson02.rst  lesson03.rst  lesson04.rst  lesson05.rst  lesson06.rst  lesson07.rst  lesson08.rst  lesson09.rst  lesson10.rst  orientation.rst
source/examples/: sort_key.py
source/exercises/: args_kwargs_lab.rst  codingbat.rst  comprehensions_lab.rst  context-managers-exercise.rst  dict_lab.rst  fizz_buzz.rst  grid_printer.rst  lambda_magic.rst  list_lab.rst  python_pushups.rst  rot13.rst  slicing.rst  sparse_array.rst  string_formatting.rst  threaded_downloader.rst  (+1 more)
source/solutions/mailroom/mailroom_json_save/: README.rst  pyproject.toml
source/solutions/mailroom/mailroom_json_save/mailroom/: cli.py
source/solutions/mailroom/mailroom_json_save/mailroom/data/: mailroom_data.json
source/solutions/mailroom/mailroom_json_save/mailroom/test/: test_cli.py  test_json_save.py  test_model.py
source/solutions/mailroom/mailroom_meta/json_save/: README.txt  pyproject.toml
source/solutions/mailroom/mailroom_meta/json_save/examples/: example_meta.py
source/solutions/mailroom/mailroom_meta/json_save/json_save/: __init__.py  json_save_meta.py  saveables.py
source/solutions/mailroom/mailroom_meta/json_save/json_save/test/: test_json_save_dec.py
source/solutions/mailroom/mailroom_pkg/: LICENSE.txt  README.txt  pyproject.toml
source/solutions/mailroom/mailroom_pkg/mailroom/: cli.py  model.py
(+312 files in other folders)
